--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -45,7 +45,7 @@
                 Background="Transparent">
         </Border>
         <Border Grid.Column="0"
-                Grid.ColumnSpan="2"
+                Grid.ColumnSpan="3"
                 Grid.Row="1"
                 Background="#FFF9F9F9">
             <Border.Effect>
@@ -179,7 +179,8 @@
         <!--Taskbar-->
         <StackPanel Orientation="Vertical"
                     Grid.Row="2"
-                    Grid.Column="1">
+                    Grid.Column="0"
+                    Grid.ColumnSpan="3">
             <ContentControl Style="{StaticResource DeploymentReminder}"/>
             <StackPanel Margin="10, 10, 0, 0"
                         Orientation="Horizontal">
@@ -243,9 +244,10 @@
         </StackPanel>
 
         <!--Grid Mod List-->
-        <Border Grid.Column="1" 
+        <Border Grid.Column="0"
+                Grid.ColumnSpan="2"
                 Grid.Row="3" 
-                Background="white" 
+                Background="White" 
                 BorderThickness="0" 
                 Margin="10">
             <DataGrid x:Name="ModList" 
@@ -293,7 +295,8 @@
                                         CanUserSort="False"/>
                     <DataGridTextColumn Header="Version" 
                                         IsReadOnly="True" 
-                                        Width="*" 
+                                        Width="*"
+                                        MinWidth="100"
                                         Binding="{Binding Version}" 
                                         CanUserSort="False"/>
                 </DataGrid.Columns>
@@ -303,14 +306,14 @@
         <!--Conflict window-->
         <StackPanel Orientation="Horizontal"
                     Grid.Column="2"
-                    Grid.Row="0"
+                    Grid.Row="2"
                     Grid.RowSpan="4">
             <ToggleButton x:Name="ToggleButtonConflictWindow"
                           Click="ToggleButtonConflictWindow_Click"
                           Style="{StaticResource ButtonConflictWindowSlider}"/>
             <Border x:Name="BorderConflictWindow"
-                    Background="#FFD6D6D6"
-                    Visibility="Collapsed">
+                    Background="#FFF9F9F9"
+                    Visibility="Visible">
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="300"/>
@@ -331,13 +334,12 @@
                                HorizontalAlignment="Center"
                                VerticalAlignment="Center"
                                Foreground="#69717d"
-                               FontWeight="Normal"
-                               Margin="0 10 0 0"/>
+                               FontWeight="Normal"/>
                     <!--Overwrites window-->
                     <Border Grid.Row="2"
                             Grid.Column="0"
                             Background="White"
-                            Margin="10 0">
+                            Margin="0 0 10 0">
                         <DataGrid x:Name="DataGridOverwrites"
                                   ItemsSource="{Binding Overwrites}"
                                   Style="{DynamicResource DataGridStyle1}" 
@@ -362,7 +364,7 @@
                     <Border Grid.Row="4"
                             Grid.Column="0"
                             Background="White"
-                            Margin="10 0">
+                            Margin="0 0 10 0">
                         <DataGrid x:Name="DataGridOverwrittenBy"
                                   ItemsSource="{Binding OverwrittenBy}"
                                   Style="{DynamicResource DataGridStyle1}" 
@@ -387,7 +389,7 @@
                     <Border Grid.Row="6"
                             Grid.Column="0"
                             Background="White"
-                            Margin="10 0 ">
+                            Margin="0 0 10 0">
                         <DataGrid ItemsSource="{Binding Conflicts}" 
                                   Style="{DynamicResource DataGridStyle1}" 
                                   CellStyle="{DynamicResource DataGridCellStyle1}" 
