--- a/MW5 Mod Oganizer WPF/Themes/Button/ButtonConflictWindowSliderTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/Button/ButtonConflictWindowSliderTheme.xaml
@@ -2,30 +2,36 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="ButtonConflictWindowSlider" 
            TargetType="{x:Type ToggleButton}">
-        <Setter Property="Content" Value="&lt;"/>
+        <Setter Property="Content" Value="-"/>
         <Setter Property="Width" Value="25"/>
-        <Setter Property="Background" Value="#FFC8C8C8"/>
+        <Setter Property="Background" Value="#FFF9F9F9"/>
         <Setter Property="Foreground" Value="#69717d"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="FontWeight" Value="Bold"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ToggleButton}">
                     <Border Background="{TemplateBinding Background}" 
-                            BorderBrush="Transparent" 
-                            BorderThickness="0" 
+                            BorderBrush="{TemplateBinding BorderBrush}" 
+                            BorderThickness="{TemplateBinding BorderThickness}" 
                             CornerRadius="0">
                         <ContentPresenter HorizontalAlignment="Center" 
                                           VerticalAlignment="Center"/>
+                        <Border.Effect>
+                            <DropShadowEffect BlurRadius="10" Color="#FFD8D8D8" ShadowDepth="6" Direction="270" Opacity="0.3"/>
+                        </Border.Effect>
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter Property="Background" Value="#FFE4E4E4"/>
-                            <Setter Property="Foreground" Value="White"/>
+                            <Setter Property="Background" Value="#FFF5F5F5"/>
+                            <Setter Property="BorderBrush" Value="#FFC8C8C8"/>
+                            <Setter Property="BorderThickness" Value="1"/>
                             <Setter Property="Cursor" Value="Hand"/>
                         </Trigger>
                         <Trigger Property="IsChecked" Value="True">
-                            <Setter Property="Content" Value=">"/>
+                            <Setter Property="Content" Value="+"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
