--- a/MW5 Mod Oganizer WPF/Themes/TextBox/TextBoxTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/TextBox/TextBoxTheme.xaml
@@ -6,10 +6,9 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TextBox}">
                     <Grid>
-                        <Border CornerRadius="5"
-                            Background="#FFF5F5F5"
-                            Width="{Binding Width}"
-                            Height="25">
+                        <Border Background="White"
+                                Width="{Binding Width}"
+                                Height="25">
                             <Grid>
                                 <Rectangle StrokeThickness="1"/>
                                 <TextBox Margin="10, 0, 0, 0"
