--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -25,33 +25,6 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        
-        <!--Layout-->
-        <!--<Rectangle 
-            Grid.Column="0" 
-            Grid.Row="2" 
-            Grid.RowSpan="2" 
-            Fill="#FFF9F9F9">
-        </Rectangle>
-        <Rectangle 
-            Grid.Column="0"
-            Grid.ColumnSpan="2"
-            Grid.Row="1"
-            Fill="#FFF9F9F9">
-        </Rectangle>-->
-        <Border Grid.Column="0" 
-                Grid.Row="2" 
-                Grid.RowSpan="2"
-                Background="Transparent">
-        </Border>
-        <Border Grid.Column="0"
-                Grid.ColumnSpan="3"
-                Grid.Row="1"
-                Background="#FFF9F9F9">
-            <Border.Effect>
-                <DropShadowEffect BlurRadius="10" Color="#FFD8D8D8" ShadowDepth="5" Direction="270" Opacity="0.3"/>
-            </Border.Effect>
-        </Border>
 
         <!--Toolbar menu-->
         <StackPanel Grid.Row="0" 
@@ -66,118 +39,6 @@
             <Button x:Name="ButtonProfiles"
                     Content="Profiles"
                     Style="{DynamicResource ToolbarMenuButtonTheme}"/>
-        </StackPanel>
-
-        <!--Logo-->
-        <TextBlock Text="MW5MO"
-                   Grid.Row="1"
-                   VerticalAlignment="Center" 
-                   HorizontalAlignment="left"
-                   Foreground="#69717d"
-                   FontSize="22"
-                   Margin="20, 0, 0, 0"
-                   Visibility="Hidden"/>
-        <Image Source="Images/logo2.png"
-               Grid.Row="1"
-               Height="40"
-               RenderOptions.BitmapScalingMode="Fant"/>
-
-        <!--File path-->
-        <StackPanel Orientation="Vertical"
-                    Grid.Column="1"
-                    Grid.Row="1">
-            <!--Primary mod folder-->
-            <StackPanel Orientation="Horizontal"
-                        HorizontalAlignment="Left"
-                        Margin="0 15 0 0">
-                <TextBox x:Name="TextBoxFileExplorer"
-                         Width="500"
-                         Height="25"
-                         VerticalContentAlignment="Center"
-                         HorizontalAlignment="Left"
-                         Margin="10, 0, 0, 0"
-                         IsReadOnly="True"
-                         Style="{StaticResource TextBoxTheme}"/>
-                <Button x:Name="ButtonOpenFolder" Content="Open folder"
-                        Width="100"
-                        Height="25"
-                        VerticalAlignment="Center"
-                        Margin="10, 0, 0, 0" 
-                        FontSize="14" 
-                        FontWeight="Normal" 
-                        Style="{StaticResource StandaloneButtonTheme}"
-                        Click="ButtonOpenFolder_Click" Cursor="Hand"/>
-            </StackPanel>
-            <!--Secondary mod folder-->
-            <StackPanel Orientation="Horizontal"
-                        HorizontalAlignment="Left"
-                        Margin="0 15 0 0">
-                <TextBox x:Name="TextBoxSecondaryFileExplorer"
-                         Width="400"
-                         Height="25"
-                         VerticalContentAlignment="Center"
-                         Margin="10, 0, 0, 0"
-                         IsReadOnly="True"
-                         Style="{StaticResource TextBoxTheme}"/>
-                <Button x:Name="ButtonOpenSecondaryFolder" 
-                        Content="Open secondary folder"
-                        Width="175"
-                        Height="25"
-                        VerticalAlignment="Center"
-                        Margin="10, 0, 0, 0" 
-                        FontSize="14" 
-                        FontWeight="Normal" 
-                        Style="{StaticResource StandaloneButtonTheme}"
-                        Click="ButtonOpenSecondaryFolder_Click" 
-                        Cursor="Hand"/>
-            </StackPanel>
-        </StackPanel>
-
-        <!--Menu buttons-->
-        <StackPanel Grid.Row="2"
-                    Grid.RowSpan="2"
-                    Margin="0,10,0,0"
-                    Visibility="Hidden">
-            <Button x:Name="ButtonDeploy" Content="Deploy"
-                    Height="50"
-                    FontSize="14"
-                    FontWeight="Normal"
-                    Style="{StaticResource MenuButtonTheme}"
-                    Cursor="Hand" 
-                    Click="ButtonDeploy_Click"
-                    Command="{Binding DeployCommand}"/>
-            <Button x:Name="ButtonUndo" Content="Undo"
-                    Height="50"
-                    FontSize="14"
-                    FontWeight="Normal"
-                    Style="{StaticResource MenuButtonTheme}" 
-                    Cursor="Hand" 
-                    Click="ButtonUndo_Click"
-                    Command="{Binding UndoCommand}"/>
-            <Button x:Name="ButtonClearPath" 
-                    Content="Clear"
-                    Height="50"
-                    FontSize="14"
-                    FontWeight="Normal"
-                    Click="ButtonClearPath_Click"
-                    Command="{Binding ClearCommand}"
-                    Style="{StaticResource MenuButtonTheme}" Cursor="Hand"/>
-            <Button x:Name="ButtonSetRecovery" 
-                    Content="Set recovery"
-                    Height="50"
-                    FontSize="14"
-                    FontWeight="Normal"
-                    Click="ButtonSetRecovery_Click"
-                    Style="{StaticResource MenuButtonTheme}" 
-                    Cursor="Hand"/>
-            <Button x:Name="ButtonReset" Content="Reset"
-                    Height="50"
-                    FontSize="14"
-                    FontWeight="Normal"
-                    Style="{StaticResource MenuButtonTheme}" 
-                    Cursor="Hand" 
-                    Click="ButtonReset_Click"
-                    Command="{Binding ResetCommand}"/>
         </StackPanel>
 
         <!--Taskbar-->
@@ -325,6 +186,81 @@
             </DataGrid>
         </Border>
         
+        <!--Header-->
+        <Border Grid.Column="0"
+                Grid.ColumnSpan="3"
+                Grid.Row="1"
+                Background="#FFF9F9F9">
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="10" Color="#FFD8D8D8" ShadowDepth="5" Direction="270" Opacity="0.3"/>
+            </Border.Effect>
+        </Border>
+
+        <!--Logo-->
+        <Grid Grid.Row="1">
+            <TextBlock Text="MW5MO"
+                       VerticalAlignment="Center" 
+                       HorizontalAlignment="left"
+                       Foreground="#69717d"
+                       FontSize="22"
+                       Margin="20, 0, 0, 0"
+                       Visibility="Hidden"/>
+            <Image Source="Images/logo2.png"
+                   Height="40"
+                   RenderOptions.BitmapScalingMode="Fant"/>
+        </Grid>
+        
+        <!--File paths-->
+        <StackPanel Orientation="Vertical"
+                    Grid.Column="1"
+                    Grid.Row="1">
+            <!--Primary mod folder-->
+            <StackPanel Orientation="Horizontal"
+                        HorizontalAlignment="Left"
+                        Margin="0 15 0 0">
+                <TextBox x:Name="TextBoxFileExplorer"
+                         Width="500"
+                         Height="25"
+                         VerticalContentAlignment="Center"
+                         HorizontalAlignment="Left"
+                         Margin="10, 0, 0, 0"
+                         IsReadOnly="True"
+                         Style="{StaticResource TextBoxTheme}"/>
+                <Button x:Name="ButtonOpenFolder" Content="Open folder"
+                        Width="100"
+                        Height="25"
+                        VerticalAlignment="Center"
+                        Margin="10, 0, 0, 0" 
+                        FontSize="14" 
+                        FontWeight="Normal" 
+                        Style="{StaticResource StandaloneButtonTheme}"
+                        Click="ButtonOpenFolder_Click" Cursor="Hand"/>
+            </StackPanel>
+            <!--Secondary mod folder-->
+            <StackPanel Orientation="Horizontal"
+                        HorizontalAlignment="Left"
+                        Margin="0 15 0 0">
+                <TextBox x:Name="TextBoxSecondaryFileExplorer"
+                         Width="400"
+                         Height="25"
+                         VerticalContentAlignment="Center"
+                         Margin="10, 0, 0, 0"
+                         IsReadOnly="True"
+                         Style="{StaticResource TextBoxTheme}"/>
+                <Button x:Name="ButtonOpenSecondaryFolder" 
+                        Content="Open secondary folder"
+                        Width="175"
+                        Height="25"
+                        VerticalAlignment="Center"
+                        Margin="10, 0, 0, 0" 
+                        FontSize="14" 
+                        FontWeight="Normal" 
+                        Style="{StaticResource StandaloneButtonTheme}"
+                        Click="ButtonOpenSecondaryFolder_Click" 
+                        Cursor="Hand"/>
+            </StackPanel>
+        </StackPanel>
+
         <!--Conflict window-->
         <StackPanel Orientation="Horizontal"
                     Grid.Column="2"
@@ -433,17 +369,6 @@
             </Border>
 
         </StackPanel>
-
-        <!--Copyright disclaimer-->
-        <TextBlock Text="© Maxim Agemans"
-                   Grid.Column="0" 
-                   Grid.Row="3"
-                   VerticalAlignment="Bottom"
-                   HorizontalAlignment="Left"
-                   FontSize="14" 
-                   Margin="5, 0, 0, 5" 
-                   Foreground="#FFA19BCA"
-                   Visibility="Hidden"/>
     </Grid>
 </Window>
     
