--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -49,7 +49,7 @@
                         </behaviors:EventTrigger>
                     </behaviors:Interaction.Triggers>
                 </TextBox>
-                <Button Command="{Binding MoveUpCommand}">
+                <Button Command="{Binding ArrowUpCommand}">
                     <Button.Template>
                         <ControlTemplate TargetType="Button">
                             <ContentPresenter/>
@@ -58,8 +58,7 @@
                     <TextBlock Text="&#x1F81D;"
                                FontSize="25"
                                Margin="20 0 0 0"
-                               Cursor="Hand"
-                               MouseLeftButtonDown="ArrowUp_MouseLeftButtonDown">
+                               Cursor="Hand">
                         <TextBlock.Style>
                             <Style TargetType="{x:Type TextBlock}">
                                 <Setter Property="Foreground" Value="#484D54"/>
