--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -285,12 +285,22 @@
                         <RowDefinition Height="10"/>
                     </Grid.RowDefinitions>
 
+                    <Border Grid.Row="0"
+                            Grid.RowSpan="2"
+                            Background="#FFC1C1C1"
+                            BorderBrush="#FFADADAD"
+                            BorderThickness="0 0 3 4"
+                            Margin="0 0 10 0">
+                    </Border>
+
                     <TextBlock Grid.Row="0"
                                Text="Conflict window"
+                               TextOptions.TextFormattingMode="Display"
+                               FontWeight="Bold"
                                HorizontalAlignment="Center"
                                VerticalAlignment="Center"
                                Foreground="#484D54"
-                               FontWeight="Normal"/>
+                               Margin="0 5 0 0"/>
                     <!--Overwrites window-->
                     <Border Grid.Row="2"
                             Grid.Column="0"
